--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
   <div class="wrap">
     <!-- Reemplazar la URL con la de tu despliegue de Apps Script (Web App) -->
     <iframe
-      src="https://docs.google.com/spreadsheets/d/1WCc53pIAmfcnpkI60P9DmadhZEPgzvvC6i-xA1Id4pI/edit?usp=sharing"
+      src="https://docs.google.com/spreadsheets/d/e/2PACX-1vSnKUsGmTaHvAdr3zFrT3HtMFkj8pN26-qFsOujwVYeCuhGchmLMWG20zbzfyPjsN47TMWz2-_vjcPO/pubhtml?gid=1548898381&single=true"
       title="Sistema de Licencias y Permisos - INGAVI"
       loading="eager"
       referrerpolicy="no-referrer">
