--- a/index.html
+++ b/index.html
@@ -18,12 +18,9 @@
 <body>
   <div class="wrap">
     <!-- Reemplazar la URL con la de tu despliegue de Apps Script (Web App) -->
-    <iframe
-      src="https://docs.google.com/spreadsheets/d/e/2PACX-1vSnKUsGmTaHvAdr3zFrT3HtMFkj8pN26-qFsOujwVYeCuhGchmLMWG20zbzfyPjsN47TMWz2-_vjcPO/pubhtml?gid=1548898381&single=true"
-      title="Sistema de Licencias y Permisos - INGAVI"
-      loading="eager"
-      referrerpolicy="no-referrer">
-    </iframe>
+
+    <iframe src="https://docs.google.com/spreadsheets/d/e/2PACX-1vSnKUsGmTaHvAdr3zFrT3HtMFkj8pN26-qFsOujwVYeCuhGchmLMWG20zbzfyPjsN47TMWz2-_vjcPO/pubhtml?gid=363818538&amp;single=true&amp;widget=true&amp;headers=false"></iframe>
+    
   </div>
 </body>
 </html>
